--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio-Full Stack Web Developer</title>
-    <link rel="icon" href="src\Images\portfolio.png" type="image/x-icon"/>
+    <link rel="icon" href="public/Images/portfolio.png" type="image/x-icon"/>
   </head>
   <body>
     <div id="root"></div>
